CHANGES IN FLTK 1.1.0b8

	- The Fl_Color_Chooser widget now supports keyboard
	  navigation.
	- Fixed button and valuator widgets to call Fl::focus()
	  instead of take_focus().
	- Tweeked the radio button drawing code for better
	  circles with different boxtypes.
	- The Fl_File_Chooser widget did not provide a shown()
	  method, and fl_file_chooser() and fl_dir_chooser() did
	  not wait on shown(); this would cause them to return
	  prematurely if you switched desktops/workspaces.
	- Cosmetic changes to plastic boxtypes.  Now look much
	  better for large areas and the sides now have a much
	  greater "3D" feeling to them.
	- Added new Fl::draw_box_active() method so that
	  boxtypes can find out if the widget they are drawing
	  for is active or not.
	- Fl_Button and its subclasses did not redraw the parent
	  when the boxtype was FL_NO_BOX and they lost keyboard
	  focus (the parent redraw clears the focus box.)
	- Fixed the example program makefile - wasn't building
	  the mandelbrot and shiny demos right.
	- Fl::set_font(Fl_Font, Fl_Font) was not implemented.
	- Fixed the documentation Makefile commands; was not
	  using the fltk.book file for some reason...


CHANGES IN FLTK 1.1.0b7

	- More documentation updates...
	- Mac OS X support works 95%
	- The Fl_Window::hotspot() off-screen avoidance code was
	  commented out.
	- Mac OS X uses mostly Carbon event handling to support
	  Mousewheel, three buttons, all modifier keys, etc.
	- Updated paragraph 4 of the FLTK license exceptions;
	  there was some question about the requirement to show
	  that a program uses FLTK, which is required by section
	  6 of the LGPL. The new exemption specifies that
	  inclusion of the FLTK license is not required, just a
	  statement that the program uses FLTK.
	- Fl_Button::handle() was calling take_focus() for both
	  FL_PUSH and FL_DRAG.
	- File and memory fixes for Fl_GIF_Image, Fl_PNG_Image,
	  Fl_PNM_Image, Fl_Shared_Image, Fl_Tiled_Image, and
	  Fl_XBM_Image.